Changelog
=========

2.3.6 (unreleased)
------------------

- Personal bar viewlet home link simply links to the user actions list.
  [danjacka]


2.3.5 (2013-05-23)
------------------

- Fixed AttributeError for FilesystemResourceDirectory
  See https://dev.plone.org/ticket/13506
  [kroman0]

- Check appropriate permission for 'Revert to this revision' button.
  [danjacka]


2.3.4 (2013-03-05)
------------------

- handle missing feed type so it doesn't throw an error
  [vangheem]

- handle absense of ACTUAL_URL on request.
  Fixes https://dev.plone.org/ticket/13173
  [vangheem]

- Also show history on the folder contents view
  [vangheem]


2.3.3 (2013-01-01)
------------------

- Changed the behaviour of the title viewlet for items in the portal_factory.
  See https://dev.plone.org/ticket/12117
  [alert]

- Fix an edge case where getNavigationRootObject could loop infinitely.
  [davisagli]

- Add 'subsection' prefix to the all sections below to avoid classnames
  that start with digits, which is not permitted by the CSS standard.
  [erral]

- Display publication date only if Effective date is set, regardless of object
  state. Tickets:
  https://dev.plone.org/ticket/13045 and https://dev.plone.org/ticket/13046
  [vipod]


2.3.2 (2012-10-17)
------------------

- Add Language='all' as a keyword argument to avoid LinguaPlone deleting it when
  it patches the catalog
  [erral]

- Use context object's url to create the cache key instead of the portal_url.
  [erral]

- Avoid extra space at the end of icon alt attributes.
  [davisagli]

- Merge plip #12905 to provide more body classes
  [vangheem]

- adding user roles to body class, eg: userrole-anonymous, ...
  [garbas]

- Use normalized template name for body class since dots are not a good idea in classes
  [daftdog]

2.3.1 (2012-08-29)
------------------

- Icons accessibility improvement. Append mimetype name to img alt attribute
  [toutpt]


2.3 (2012-08-11)
----------------
